# movement-figures

./: .gitignore  README.md  _quarto.yml  custom.css  pyproject.toml
data/: EPM_rois.geojson
docs/superpowers/plans/: 2026-06-30-linting-precommit.md
docs/superpowers/specs/: 2026-06-29-movement-figures-structure-design.md  2026-06-30-linting-precommit-design.md  2026-06-30-pupil-tracking-poster-figure-design.md
figures/: epm_exploration_poster.qmd  pupil_tracking_poster.qmd
src/movement_figures/: __init__.py  io.py  layout.py  style.py
src/movement_figures/styles/: movement-base.mplstyle  movement-poster.mplstyle
tests/: conftest.py  test_io.py  test_style.py
