[project]
name = "movement-figures"
version = "0.1.0"
description = "Reproducible figures for movement research outputs"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "movement>=0.17",
    "matplotlib",
    "numpy",
    "jupyter",
    "nbformat",
    "nbclient",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
movement_figures = ["styles/*.mplstyle"]

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
