[project]
name = "movement-figures"
version = "0.1.0"
description = "Reproducible figures for movement research outputs"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "movement>=0.17",
    "matplotlib",
    "seaborn",
    "numpy",
    "jupyter",
    "nbformat",
    "nbclient",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
movement_figures = ["styles/*.mplstyle"]

[dependency-groups]
dev = [
    "pytest",
    "pre-commit",
    "ruff",
    "codespell",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# matplotlib.use("Agg") must run before pyplot is imported, so the imports
# that follow it are intentionally not at the top of the file.
"tests/conftest.py" = ["E402"]

[tool.codespell]
skip = '.git,*.svg,*.pdf,uv.lock'
check-hidden = true
